--- a/modules/player/player.styl
+++ b/modules/player/player.styl
@@ -1,5 +1,17 @@
 .player:fullscreen {
     width: 100%;
     background: black;
-    text-align: center
+    text-align: center;
+}
+
+.player {
+    background: black;
+    position: relative;
+    overflow: hidden;
+
+    canvas {
+        width: 100%;
+        height: auto;
+        vertical-align: top;
+    }
 }
