--- a/modules/dialog/dialog.styl
+++ b/modules/dialog/dialog.styl
@@ -3,8 +3,8 @@
 .dialog {
     position: absolute;
     left: 50%;
-    margin-left: -300px;
-    width: 600px;
+    margin-left: -320px;
+    width: 640px;
     background: white;
     top: 50px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
@@ -51,6 +51,17 @@
             content: "\f29a";
             font-size: 30px;
             font-family: 'icon-font';
+        }
+
+        &_video {
+            right: -35px;
+            top: 5px;
+            padding: 0;
+
+            &:before {
+                color: $textPrimaryColor;
+                text-shadow: 0 1px 2px black;
+            }
         }
     }
 }
