--- a/modules/audio-selector/audio-selector.styl
+++ b/modules/audio-selector/audio-selector.styl
@@ -15,7 +15,7 @@
 
     &__filter {
         position: absolute
-        right: 0
+        right: 3px
         top: 16px
         font-size: 14px
         width: 46px
