--- a/modules/player/directives/player-controls/player-controls.styl
+++ b/modules/player/directives/player-controls/player-controls.styl
@@ -8,6 +8,10 @@
     height: 24px;
     background: rgba(0,0,0,0.7);
 
+    &_paused {
+        bottom: 0;
+    }
+
     .player:hover & {
         bottom: 0;
     }
