--- a/modules/photo-selector/styles/album-list.css
+++ b/modules/photo-selector/styles/album-list.css
@@ -112,13 +112,9 @@
   overflow: hidden;
   text-overflow: ellipsis;
   color: #fff;
-  padding: 3px 4px;
+  padding: 0 4px;
   width: 100%;
   transition: transform 0.1s;
-  transform: translateY(100%);
-}
-.album-list__item:hover .album-list__item-title {
-  transform: translateY(0);
 }
 .album-list__item img {
   min-width: 100%;
@@ -131,10 +127,10 @@
   opacity: 0.7;
 }
 .album-list_size_p .album-list__item-title {
-  padding: 5px 7px;
+  padding: 1px 7px 2px;
 }
 .album-list_size_q .album-list__item-title {
-  padding: 7px 10px;
+  padding: 3px 10px 4px;
 }
 .album-list_size_p .album-list__item {
   width: 200px;
