--- a/modules/photo-selector/styles/album-list.styl
+++ b/modules/photo-selector/styles/album-list.styl
@@ -133,14 +133,9 @@
             overflow: hidden;
             text-overflow: ellipsis
             color: white;
-            padding: 3px 4px;
+            padding: 0 4px;
             width: 100%;
             transition: transform 0.1s;
-            transform: translateY(100%);
-        }
-
-        &:hover &-title{
-            transform: translateY(0);
         }
 
         img {
@@ -157,11 +152,11 @@
     }
 
     &_size_p &__item-title {
-        padding: 5px 7px;
+        padding: 1px 7px 2px;
     }
 
     &_size_q &__item-title {
-        padding: 7px 10px;
+        padding: 3px 10px 4px;
     }
 
     &_size_p &__item{
