--- a/modules/player/directives/player-controls/player-controls.css
+++ b/modules/player/directives/player-controls/player-controls.css
@@ -8,10 +8,13 @@
   height: 24px;
   background: rgba(0,0,0,0.7);
 }
-.controls_paused {
+.player:hover .controls {
   bottom: 0;
 }
-.player:hover .controls {
+.player_no-activity:hover .controls {
+  bottom: -34px;
+}
+.controls_paused {
   bottom: 0;
 }
 .controls__toggle {
@@ -32,4 +35,23 @@
 }
 .controls__toggle_pause:before {
   content: "\f0b6";
+}
+.controls__full-screen {
+  float: right;
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0 0 0 10px;
+  width: 24px;
+  height: 24px;
+}
+.controls__full-screen:before {
+  content: "\f29f";
+  display: block;
+  font-size: 24px;
+  color: #fff;
+  font-family: 'icon-font';
+}
+.controls__full-screen_active:before {
+  content: "\f2a0";
 }
