--- a/stylus/general.styl
+++ b/stylus/general.styl
@@ -9,8 +9,11 @@ body, html {
     height: 100%;
 }
 
-button {
+button, input, textarea, a {
     outline: none;
+}
+
+button {
     cursor: pointer;
 }
 
