--- a/css/main.css
+++ b/css/main.css
@@ -585,6 +585,14 @@
   height: auto;
   vertical-align: top;
 }
+.player_no-activity {
+  cursor: none;
+}
+
+.preview-modal__content {
+  padding: 20px 25px;
+  background: #f5f5f5;
+}
 
 .tooltip {
   position: absolute;
@@ -954,8 +962,22 @@
 .player_no-activity:hover .controls {
   bottom: -34px;
 }
+.controls__progress {
+  box-sizing: border-box;
+  width: 100%;
+  margin: 6px 0;
+}
+.controls__progress-holder {
+  overflow: hidden;
+  padding: 0 10px;
+}
 .controls_paused {
   bottom: 0;
+}
+.controls__volume {
+  float: right;
+  margin: 6px;
+  width: 80px;
 }
 .controls__toggle {
   float: left;
@@ -1037,8 +1059,13 @@ body,
 html {
   height: 100%;
 }
-button {
+button,
+input,
+textarea,
+a {
   outline: none;
+}
+button {
   cursor: pointer;
 }
 .main {
@@ -1112,8 +1139,8 @@ button {
   background: #676767;
 }
 .form-row {
-  margin: 0 0 10px;
   overflow: hidden;
+  margin-bottom: 10px;
 }
 .input {
   height: 30px;
@@ -1140,4 +1167,38 @@ button {
 }
 .form-btns .button {
   margin-left: 20px;
+}
+.column {
+  float: left;
+}
+.two-columns {
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+.two-columns .column {
+  width: 48%;
+}
+.two-columns .column:first-child {
+  margin-right: 4%;
+}
+.textarea {
+  height: 30px;
+  border: 1px solid #b6b6b6;
+  line-height: 18px;
+  font-size: 14px;
+  width: 100%;
+  margin: 0;
+  padding: 6px 5px 6px 10px;
+  box-sizing: border-box;
+  resize: none;
+  transition: height 0.1s;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.textarea:focus {
+  height: 150px;
+  overflow: auto;
+  text-overflow: clip;
+  white-space: normal;
 }
