--- a/stylus/main.css
+++ b/stylus/main.css
@@ -22,8 +22,13 @@ body,
 html {
   height: 100%;
 }
-button {
+button,
+input,
+textarea,
+a {
   outline: none;
+}
+button {
   cursor: pointer;
 }
 .main {
@@ -97,8 +102,8 @@ button {
   background: #676767;
 }
 .form-row {
-  margin: 0 0 10px;
   overflow: hidden;
+  margin-bottom: 10px;
 }
 .input {
   height: 30px;
@@ -125,4 +130,38 @@ button {
 }
 .form-btns .button {
   margin-left: 20px;
+}
+.column {
+  float: left;
+}
+.two-columns {
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+.two-columns .column {
+  width: 48%;
+}
+.two-columns .column:first-child {
+  margin-right: 4%;
+}
+.textarea {
+  height: 30px;
+  border: 1px solid #b6b6b6;
+  line-height: 18px;
+  font-size: 14px;
+  width: 100%;
+  margin: 0;
+  padding: 6px 5px 6px 10px;
+  box-sizing: border-box;
+  resize: none;
+  transition: height 0.1s;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.textarea:focus {
+  height: 150px;
+  overflow: auto;
+  text-overflow: clip;
+  white-space: normal;
 }
