--- a/modules/header/header.styl
+++ b/modules/header/header.styl
@@ -5,6 +5,14 @@
     height: $headerHeight;
     padding: 0 0 0 25px;
     margin-bottom: 10px;
+
+    &__user {
+        float: right;
+        padding: 13px 20px;
+        color: $textPrimaryColor;
+        font-size: 20px;
+        line-height: 24px;
+    }
 }
 
 .logo {
