--- a/modules/panel/panel.styl
+++ b/modules/panel/panel.styl
@@ -192,9 +192,8 @@
         }
 
         img {
-            min-width: 100%;
+            width: 100%;
             vertical-align: top;
-            min-height: 100%;
         }
     }
 }
