--- a/modules/header/header.css
+++ b/modules/header/header.css
@@ -4,6 +4,13 @@
   padding: 0 0 0 25px;
   margin-bottom: 10px;
 }
+.header__user {
+  float: right;
+  padding: 13px 20px;
+  color: #fff;
+  font-size: 20px;
+  line-height: 24px;
+}
 .logo {
   color: #fff;
   font: 34px/50px 'Lobster', cursive;
