--- a/modules/photo-selector/styles/album-list.css
+++ b/modules/photo-selector/styles/album-list.css
@@ -107,19 +107,18 @@
   position: absolute;
   bottom: 0;
   left: 0;
+  right: 0;
   background: rgba(0,0,0,0.7);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   color: #fff;
   padding: 0 4px;
-  width: 100%;
   transition: transform 0.1s;
 }
 .album-list__item img {
-  min-width: 100%;
+  width: 100%;
   vertical-align: top;
-  min-height: 100%;
   opacity: 1;
   transition: opacity 0.1s;
 }
@@ -139,7 +138,7 @@
 }
 .album-list_size_q .album-list__item {
   width: 320px;
-  height: 210px;
+  height: 180px;
   margin: 10px 15px;
 }
 @-moz-keyframes create {
