--- a/modules/photo-selector/styles/album-list.styl
+++ b/modules/photo-selector/styles/album-list.styl
@@ -128,20 +128,19 @@
             position: absolute;
             bottom: 0;
             left: 0;
+            right: 0;
             background: rgba(0,0,0,0.7);
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis
             color: white;
             padding: 0 4px;
-            width: 100%;
             transition: transform 0.1s;
         }
 
         img {
-            min-width: 100%;
+            width: 100%;
             vertical-align: top;
-            min-height: 100%;
             opacity: 1;
             transition: opacity 0.1s;
         }
@@ -167,7 +166,7 @@
 
     &_size_q &__item{
         width: 320px;
-        height: 210px;
+        height: 180px;
         margin: 10px 15px;
     }
 }
