--- a/modules/photo-selector/styles/photo-list.styl
+++ b/modules/photo-selector/styles/photo-list.styl
@@ -50,9 +50,8 @@
         }
 
         img {
-            min-width: 100%;
+            width: 100%;
             vertical-align: top;
-            min-height: 100%;
         }
     }
 
@@ -68,13 +67,13 @@
     }
 
     &_size_q &__item:after {
-        line-height: 210px;
+        line-height: 180px;
         font-size: 130px;
     }
 
     &_size_q &__item{
         width: 320px;
-        height: 210px;
+        height: 180px;
         margin: 10px 15px;
     }
 }
