--- a/modules/player/directives/player-controls/player-controls.styl
+++ b/modules/player/directives/player-controls/player-controls.styl
@@ -8,7 +8,8 @@
     height: 24px;
     background: rgba(0,0,0,0.7);
 
-    .player:hover & {
+    .player:hover &,
+    .player_rewind-started & {
         bottom: 0;
     }
 
@@ -76,7 +77,7 @@
             font-family: 'icon-font';
         }
 
-        &_active:before {
+        &.active:before {
             content: "\f2a0";
         }
     }
