--- a/modules/player/player.css
+++ b/modules/player/player.css
@@ -1,7 +1,13 @@
 .player:fullscreen {
   width: 100%;
+  height: 100%;
   background: #000;
   text-align: center;
+}
+.player:fullscreen canvas {
+  top: 50%;
+  position: relative;
+  transform: translateY(-50%);
 }
 .player {
   background: #000;
