--- a/modules/player/player.styl
+++ b/modules/player/player.styl
@@ -1,7 +1,14 @@
 .player:fullscreen {
     width: 100%;
+    height: 100%
     background: black;
     text-align: center;
+
+    canvas {
+        top: 50%;
+        position: relative;
+        transform: translateY(-50%);
+    }
 }
 
 .player {
