--- a/modules/audio-selector/audio-selector.styl
+++ b/modules/audio-selector/audio-selector.styl
@@ -105,8 +105,8 @@
 
     &__item.selected &__toggle:before {
         content: "\f102"
-        color: lighten($redColor, 20%)
-        background-color: $secondaryTextColor
+        color: $textPrimaryColor;
+        background-color: $redColor;
     }
 
     &__item:hover &__toggle,
