--- a/modules/player/directives/player-controls/player-controls.styl
+++ b/modules/player/directives/player-controls/player-controls.styl
@@ -58,6 +58,10 @@
         &_pause:before {
             content: "\f0b6";
         }
+
+        &[disabled] {
+            opacity: 0.5;
+        }
     }
 
     &__full-screen {
