--- a/modules/player/player.styl
+++ b/modules/player/player.styl
@@ -1,3 +1,5 @@
+@import '../../stylus/variables'
+
 .player:fullscreen {
     width: 100%;
     height: 100%
@@ -24,5 +26,20 @@
         
     &_no-activity {
         cursor: none;
+    }
+    
+    &__load-progress {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0;
+        background: #4b50ff;
+        height: 3px;
+        opacity: 1;
+        transition: width 0.2s ease-out, opacity 0.2s ease-out;
+
+        .player_loaded & {
+            opacity: 0;
+        }
     }
 }
