--- a/modules/player/player.styl
+++ b/modules/player/player.styl
@@ -29,17 +29,47 @@
     }
     
     &__load-progress {
-        position: absolute;
-        bottom: 0;
-        left: 0;
+        display: block;
         width: 0;
         background: #4b50ff;
         height: 3px;
-        opacity: 1;
-        transition: width 0.2s ease-out, opacity 0.2s ease-out;
+        transition: width 0.2s ease-out;
+        z-index: 2;
+        
+        &-wrap {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 3px;
+            background: #8695E2;
+            opacity: 1;
+            transition: opacity 0.2s 0.2s ease-out;
 
-        .player_loaded & {
-            opacity: 0;
+            /*&:after {
+                content: '';
+                position: absolute;
+                right: 0;
+                top: 0;
+                bottom: 0;
+                width: 4px;
+                background: #4b50ff;
+                animation: load-animation 3s infinite ease-out;
+            }*/
+
+            .player_loaded & {
+                opacity: 0;
+            }
         }
     }
 }
+/*
+@keyframes load-animation {
+    0% {
+        right: 0;
+    }
+
+    100% {
+        right: 100%;
+    }
+}*/
