--- a/modules/player/player.css
+++ b/modules/player/player.css
@@ -23,15 +23,43 @@
   cursor: none;
 }
 .player__load-progress {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  display: block;
   width: 0;
   background: #4b50ff;
   height: 3px;
-  opacity: 1;
-  transition: width 0.2s ease-out, opacity 0.2s ease-out;
+  transition: width 0.2s ease-out;
+  z-index: 2;
 }
-.player_loaded .player__load-progress {
+.player__load-progress-wrap {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 3px;
+  background: #8695e2;
+  opacity: 1;
+  transition: opacity 0.2s 0.2s ease-out;
+/*&:after {
+                content: '';
+                position: absolute;
+                right: 0;
+                top: 0;
+                bottom: 0;
+                width: 4px;
+                background: #4b50ff;
+                animation: load-animation 3s infinite ease-out;
+            }*/
+}
+.player_loaded .player__load-progress-wrap {
   opacity: 0;
 }
+/*
+@keyframes load-animation {
+    0% {
+        right: 0;
+    }
+
+    100% {
+        right: 100%;
+    }
+}*/
